--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script id="web" type="module" src="/src/main.tsx"></script>
+    <script id="web" type="module" src="./src/main.tsx"></script>
   </body>
 </html>
