--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -4,12 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess App</title>
+  <title>Chess Minds</title>
+  <meta name="description" content="Chess Minds est une application web de jeu d'échecs en ligne.">
+  <meta author="BLAMPIED Lucas, ELHILALI Mouad">
+  <meta property="og:title" content="Chess Minds - Jouez aux échecs en ligne">
+  <meta property="og:description"
+    content="Chess Minds est une application web de jeu d'échecs en ligne. Rejoignez-nous pour jouer contre des joueurs du monde entier.">
+  <meta property="og:image" content="src/image/logo.svg">
+  <meta property="og:url" content="#">
+  <meta property="og:type" content="website">
+  <meta name="keywords" content="jeu d'échecs, échecs en ligne, jouer aux échecs">
+  <meta property="og:site_name" content="Chess Minds">
+  <meta property="og:image:alt" content="Logo de Chess Minds">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
     rel="stylesheet">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="src/images/logo.svg">
+  <link rel="icon" href="src/images/logo.svg">
 </head>
 
 <body>
